--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,9 +235,8 @@ body {
 }
 
 .user-info__footer {
-  /* position: relative; */
-  /* bottom: 10vh; */
   font-size: 0.8rem;
+  margin-top: 1rem;
 }
 
 /* CONTENT - GENERAL */
